workshops/dockerton-2019/kubernetes-workshop-recommendations/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: recommendation-service
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: api.dfds.cloud
    http:
      paths:
      - path: /recommendations
        backend:
          serviceName: recommendation-service
          servicePort: external
